Test connections library

--- a/srclib/Makefile
+++ b/srclib/Makefile
@@ -3,13 +3,19 @@ CC := gcc
 CFLAGS := -g -Wall
 ########################################################
 INCDIR := ../includes
-OBJECTS := daemon.o
+OBJECTS := connections.o
 #######################################################
 
 all: $(OBJECTS)
 
-daemon.o: daemon.c $(INCDIR)/daemon.h
+connections.o: connections.c $(INCDIR)/connections.h
+	$(CC) $(CFLAGS) -c $?
+
+tester: tester.o connections.o
+	$(CC) $(CFLAGS) -o tester $?
+
+tester.o: tester.c
 	$(CC) $(CFLAGS) -c $?
 
 clean:
-	rm *.o
+	rm *.o tester
