Final commit. Reorganization

--- a/server.conf
+++ b/server.conf
@@ -4,20 +4,26 @@
 # stored on the global config dictionary. See includes/config.h for more
 # information on how to use this module.
 
-maxthreads
+max_clients # Maximum number of threads
 15
 
-absdir
-/home/lletfrix/server/www
+server_root # Directory of website's html
+/assets/www/
 
-dir404
-/home/lletfrix/server/www/404.html
+listening_port # Server port
+8080
 
-dir500
-/home/lletfrix/server/www/500.html
+404file # Website's 404 error html, must start with / and be located on server_root
+404.html
 
-scrtxt
-home/lletfrix/server/scripts/aux.txt
+500file # Website's 500 error html, must start with / and be located on server_root
+500.html
 
-svrname
+scrtxt # Path to one scripts file
+/assets/www/scripts/aux.txt
+
+server_signature # Server name
 MyServer
+
+temp_dir # dir to which temporal .txt will be written
+/assets/temp/
