--- a/server.conf
+++ b/server.conf
@@ -13,10 +13,10 @@ server_root # Directory of website's html
 listening_port # Server port
 8080
 
-404file # Website's 404 error html, must start with / and be located on server_root
+404file # Website's 404 error html, must be located on server_root
 404.html
 
-500file # Website's 500 error html, must start with / and be located on server_root
+500file # Website's 500 error html, must be located on server_root
 500.html
 
 scrtxt # Path to one scripts file
